--- a/public/style.css
+++ b/public/style.css
@@ -23,10 +23,21 @@ h1 {
   background: #f9f9f9;
   border: 1px solid #ff8800;
 }
-#uploads a{
+#uploads div{
   padding: 5px;
   background-color: #eee;
   margin: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#uploads div .delete{
+  background-color: red;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 5px;
 }
 .wrap {
   border-radius: 4px;
