--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,6 +61,8 @@
         </div>
 
     </div>
+    <p class="footer-copyright">Designed and developed by <a class="c-w" href="https://amsstudio.me">AMS-Studio</a> </p>
+
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.4.0/socket.io.js"></script>
